Projet GL/test/src/test/deca/context/valid/increment4/assign-null.deca
// test a = null;

// Historique : cree le 20/01/2023

class A{}

{
    A a = new A();
    a = null;
}